--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -11,11 +11,19 @@
         android:layout_weight="1" >
 
         <ImageView
+            android:id="@+id/ivMobile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_centerInParent="true"
-            android:src="@drawable/welcom_logo" />
+            android:src="@drawable/mobile" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/ivMobile"
+            android:text="超级微信"
+            android:textColor="#000000"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -126,4 +134,12 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/btnUrl"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="设置服务器的Ip地址"
+        android:textColor="#000000"
+        android:layout_gravity="center_horizontal"
+        android:background="@null"/>
 </LinearLayout>
