--- a/res/layout/activity_new_group.xml
+++ b/res/layout/activity_new_group.xml
@@ -36,6 +36,7 @@
             android:textSize="20sp" />
 
         <Button
+            android:id="@+id/btn_save_group"
             android:layout_width="60dp"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -74,6 +75,7 @@
         android:textSize="18sp" />
 
     <LinearLayout
+        android:id="@+id/layout_group_icon"
         android:layout_width="match_parent"
         android:layout_height="39dp"
         android:layout_marginBottom="10dp"
@@ -92,13 +94,13 @@
             android:layout_weight="1"
             />
 
-        <CheckBox
-            android:id="@+id/lic"
+        <ImageView
+            android:id="@+id/group_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0"
             android:layout_gravity="center_vertical"
-            android:button="@drawable/checkbox_bg_selector"
+            android:button="@drawable/group_icon"
             />
 
     </LinearLayout>
